Update .env-layout.txt to include environment and database configuration details for Dottie API

--- a/backend/.env-layout.txt
+++ b/backend/.env-layout.txt
@@ -1,2 +1,9 @@
+# Dottie API Environment Variables
 PORT=5000
-NODE_ENV=development 
+
+# Database Configuration
+NODE_ENV=development
+# Set to 'production' to use Azure SQL
+
+# Azure SQL Configuration (used only in production)
+# AZURE_SQL_CONNECTION_STRING=Driver={ODBC Driver 17 for SQL Server};Server=YOUR_SERVER.database.windows.net;Database=HealthDB;Uid=YOUR_USERNAME;Pwd=YOUR_PASSWORD;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30; 
