--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.2",
     "knex": "^3.1.0",
     "mssql": "^10.0.2",
+    "node-fetch": "^3.3.2",
     "sqlite3": "^5.1.7",
     "tedious": "^16.7.1",
     "uuid": "^11.1.0"
