--- a/dottie-app/.gitignore
+++ b/dottie-app/.gitignore
@@ -25,3 +25,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# playwright
+playwright-report/*
+test-results/*
+test_screenshots/*
