--- a/dottie-app/package.json
+++ b/dottie-app/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -p tsconfig.build.json && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test": "vitest"
+    "test": "vitest",
+    "test:screenshots": "npx playwright test --project=safari"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
