--- a/dottie-app/package.json
+++ b/dottie-app/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
-    "test:screenshots": "npx playwright test --project=safari"
+    "test:screenshots": "npx playwright test --project=safari",
+    "test:e2e:dev:regular": "npx playwright test src/components/assessment/__tests__/e2e/development/RegularCycle.spec.ts --headed --timeout=120000"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
