test(TestPage): implement real API checks and conditional tests
- Added new test cases for real API interactions, ensuring accurate validation of responses.
- Introduced conditional tests to skip execution when the API is unavailable, enhancing test reliability.
- Removed outdated mock tests to streamline the testing process and focus on real API behavior.
- Updated test structure to include checks for API availability before executing tests, improving feedback during test runs.

--- a/dottie-app/package.json
+++ b/dottie-app/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
     "test:screenshots": "npx playwright test --project=safari",
-    "test:e2e:dev:regular": "npx playwright test src/components/assessment/__tests__/e2e/development/RegularCycle.spec.ts --headed --timeout=120000"
+    "test:e2e:dev:regular": "npx playwright test src/components/assessment/__tests__/e2e/development/RegularCycle.spec.ts --headed --timeout=120000",
+    "test:api": "node start-api-and-test.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
