feat(tests): add unit and environment-specific test scripts
- Introduced new test scripts for unit, development, and production environments in the package.json.
- Added watch options for development and production tests to enhance testing flexibility and efficiency.

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,12 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
+    "test:unit": "vitest run -t unit", 
+    "test:dev": "vitest run -t dev",
+    "test:dev:watch": "vitest -t dev",
+    "test:prod": "vitest run -t prod",
+    "test:prod:watch": "vitest -t prod",
+    "test:pattern": "vitest run -t",
     "db:init": "node scripts/initDb.js",
     "db:azure:create": "node scripts/createAzureDb.js",
     "db:azure:init": "cross-env NODE_ENV=production node scripts/initDb.js",
