--- a/backend/package.json
+++ b/backend/package.json
@@ -20,20 +20,20 @@
     "test:prod": "vitest run -t prod",
     "test:prod:watch": "vitest -t prod",
     "test:pattern": "vitest run -t",
-    "test:assessment": "vitest run -t assessment",
-    "test:assessment:dev": "vitest run -t \"assessment dev\"",
-    "test:assessment:prod": "vitest run -t \"assessment prod\"",
-    "test:assessment:unit": "vitest run -t \"assessment unit\"",
-    "test:assessment:watch": "vitest -t assessment",
-    "test:auth": "vitest run -t authentication",
-    "test:auth:dev": "vitest run -t \"authentication dev\"",
-    "test:auth:prod": "vitest run -t \"authentication prod\"",
-    "test:auth:unit": "vitest run -t \"authentication unit\"",
-    "test:auth:dev:success": "vitest run -t \"authentication dev success\"",
-    "test:auth:dev:error": "vitest run -t \"authentication dev error\"",
-    "test:auth:prod:success": "vitest run -t \"authentication prod success\"",
-    "test:auth:prod:error": "vitest run -t \"authentication prod error\"",
-    "test:auth:watch": "vitest -t authentication",
+    "test:assessment": "vitest run routes/assessment/__tests__",
+    "test:assessment:dev": "vitest run routes/assessment/__tests__/e2e",
+    "test:assessment:prod": "vitest run routes/assessment/__tests__/e2e",
+    "test:assessment:unit": "vitest run routes/assessment/__tests__/unit",
+    "test:assessment:watch": "vitest routes/assessment/__tests__",
+    "test:auth": "vitest run routes/auth/__tests__",
+    "test:auth:dev": "vitest run routes/auth/__tests__/e2e",
+    "test:auth:prod": "vitest run routes/auth/__tests__/e2e",
+    "test:auth:unit": "vitest run routes/auth/__tests__/unit",
+    "test:auth:dev:success": "vitest run routes/auth/__tests__/e2e/success",
+    "test:auth:dev:error": "vitest run routes/auth/__tests__/e2e/error",
+    "test:auth:prod:success": "vitest run routes/auth/__tests__/e2e/success",
+    "test:auth:prod:error": "vitest run routes/auth/__tests__/e2e/error",
+    "test:auth:watch": "vitest routes/auth/__tests__",
     "db:init": "node scripts/initDb.js",
     "db:azure:create": "node scripts/createAzureDb.js",
     "db:azure:init": "cross-env NODE_ENV=production node scripts/initDb.js",
