refactor: update vitest test commands to include cross-env for environment configuration in dev and assessment tests

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,24 +15,25 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:unit": "vitest run -t unit", 
-    "test:dev": "vitest run -t dev",
-    "test:dev:watch": "vitest -t dev",
+    "test:dev": "cross-env TEST_MODE=true vitest run -t dev",
+    "test:dev:watch": "cross-env TEST_MODE=true vitest -t dev",
     "test:prod": "vitest run -t prod",
     "test:prod:watch": "vitest -t prod",
     "test:pattern": "vitest run -t",
     "test:assessment": "vitest run routes/assessment/__tests__",
-    "test:assessment:dev": "vitest run routes/assessment/__tests__/e2e/dev",
+    "test:assessment:dev": "cross-env TEST_MODE=true vitest run routes/assessment/__tests__/e2e/dev",
     "test:assessment:prod": "vitest run routes/assessment/__tests__/e2e/prod",
     "test:assessment:unit": "vitest run routes/assessment/__tests__/unit",
     "test:auth": "vitest run routes/auth/__tests__",
-    "test:auth:dev": "vitest run routes/auth/__tests__/e2e/dev",
+    "test:auth:dev": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev",
     "test:auth:prod": "vitest run routes/auth/__tests__/e2e/prod",
     "test:auth:unit": "vitest run routes/auth/__tests__/unit",
-    "test:auth:dev:success": "vitest run routes/auth/__tests__/e2e/success",
-    "test:auth:dev:error": "vitest run routes/auth/__tests__/e2e/error",
-    "test:auth:prod:success": "vitest run routes/auth/__tests__/e2e/success",
-    "test:auth:prod:error": "vitest run routes/auth/__tests__/e2e/error",
-    "test:auth:watch": "vitest routes/auth/__tests__",
+    "test:auth:dev:success": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev/success",
+    "test:auth:dev:error": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev/error",
+    "test:auth:prod:success": "vitest run routes/auth/__tests__/e2e/prod/success",
+    "test:auth:prod:error": "vitest run routes/auth/__tests__/e2e/prod/error",
+    "test:auth:watch": "cross-env TEST_MODE=true vitest routes/auth/__tests__",
+    "test:auth:reset-password": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev/success/reset-password-success.test.js routes/auth/__tests__/e2e/dev/error/reset-password-error.test.js",
     "db:init": "node scripts/initDb.js",
     "db:azure:create": "node scripts/createAzureDb.js",
     "db:azure:init": "cross-env NODE_ENV=production node scripts/initDb.js",
