--- a/backend/package.json
+++ b/backend/package.json
@@ -20,24 +20,34 @@
     "test:prod": "vitest run -t prod",
     "test:prod:watch": "vitest -t prod",
     "test:pattern": "vitest run -t",
-    "test:assessment": "vitest run routes/assessment/__tests__",
-    "test:assessment:dev": "cross-env TEST_MODE=true vitest run routes/assessment/__tests__/e2e/dev",
-    "test:assessment:prod": "vitest run routes/assessment/__tests__/e2e/prod",
-    "test:assessment:unit": "vitest run routes/assessment/__tests__/unit",
+    "vercel-build": "node vercel-build.js",
+
+
+    "___test workflow____": "___test workflow using vitest and test driven development____",
+    "___status:PASSED____": "___the following tests have passed____",
+    "test:setup:unit": "vitest run routes/setup/__tests__/unit",
+    "test:setup:dev": "cross-env TEST_MODE=true vitest run routes/setup/__tests__/e2e/dev",
+    "test:setup:prod": "vitest run routes/setup/__tests__/e2e/prod",
+    "test:setup:prod:real": "cross-env USE_MOCKS=false vitest run routes/setup/__tests__/e2e/prod",
     "test:auth": "vitest run routes/auth/__tests__",
-    "test:auth:dev": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev",
-    "test:auth:prod": "vitest run routes/auth/__tests__/e2e/prod",
     "test:auth:unit": "vitest run routes/auth/__tests__/unit",
+    "test:auth:dev": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev",
     "test:auth:dev:success": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev/success",
     "test:auth:dev:error": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev/error",
+
+    "___status:TODO____": "___the following tests need to be verified____",
+    "test:auth:prod": "vitest run routes/auth/__tests__/e2e/prod",
+
+    "___status:LATER____": "___the following tests can be tested later____",
     "test:auth:prod:success": "vitest run routes/auth/__tests__/e2e/prod/success",
+    "test:auth:prod:success:real": "cross-env USE_MOCKS=false vitest run routes/auth/__tests__/e2e/prod/success",
     "test:auth:prod:error": "vitest run routes/auth/__tests__/e2e/prod/error",
-    "test:auth:watch": "cross-env TEST_MODE=true vitest routes/auth/__tests__",
-    "test:auth:reset-password": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev/success/reset-password-success.test.js routes/auth/__tests__/e2e/dev/error/reset-password-error.test.js",
-    "db:init": "node scripts/initDb.js",
-    "db:azure:create": "node scripts/createAzureDb.js",
-    "db:azure:init": "cross-env NODE_ENV=production node scripts/initDb.js",
-    "vercel-build": "node vercel-build.js"
+    "test:auth:real:prod": "node scripts/run-real-prod-tests.js",
+    "test:assessment:unit": "vitest run routes/assessment/__tests__/unit",
+    "test:assessment:dev": "cross-env TEST_MODE=true vitest run routes/assessment/__tests__/e2e/dev",
+    "test:assessment:prod": "vitest run routes/assessment/__tests__/e2e/prod",
+    "test:assessment": "vitest run routes/assessment/__tests__",
+
   },
   "keywords": [],
   "author": "",
