fix: enhance Vercel Azure SQL production integration tests by adding detailed error handling for 504 and 500 response statuses, improving debugging and reliability in database connection scenarios

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,12 +22,10 @@
     "test:pattern": "vitest run -t",
     "vercel-build": "node vercel-build.js",
 
-
     "___test workflow____": "___test workflow using vitest and test driven development____",
     "___status:PASSED____": "___the following tests have passed____",
     "test:setup:unit": "vitest run routes/setup/__tests__/unit",
     "test:setup:dev": "cross-env TEST_MODE=true vitest run routes/setup/__tests__/e2e/dev",
-    "test:setup:prod": "vitest run routes/setup/__tests__/e2e/prod",
     "test:setup:prod:real": "cross-env USE_MOCKS=false vitest run routes/setup/__tests__/e2e/prod",
     "test:auth": "vitest run routes/auth/__tests__",
     "test:auth:unit": "vitest run routes/auth/__tests__/unit",
@@ -36,6 +34,7 @@
     "test:auth:dev:error": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev/error",
 
     "___status:TODO____": "___the following tests need to be verified____",
+    "test:setup:prod": "vitest run routes/setup/__tests__/e2e/prod",
     "test:auth:prod": "vitest run routes/auth/__tests__/e2e/prod",
 
     "___status:LATER____": "___the following tests can be tested later____",
@@ -46,8 +45,7 @@
     "test:assessment:unit": "vitest run routes/assessment/__tests__/unit",
     "test:assessment:dev": "cross-env TEST_MODE=true vitest run routes/assessment/__tests__/e2e/dev",
     "test:assessment:prod": "vitest run routes/assessment/__tests__/e2e/prod",
-    "test:assessment": "vitest run routes/assessment/__tests__",
-
+    "test:assessment": "vitest run routes/assessment/__tests__"
   },
   "keywords": [],
   "author": "",
