fix: update user model method from findAll to getAll in unit tests for consistency with backend implementation

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Dottie is a user-friendly application designed to help individuals understand their menstrual health better. Through a series of simple questions, Dottie collects information about your menstrual cycle and provides personalized analysis and recommendations.",
   "main": "server.js",
   "type": "module",
   "engines": {
@@ -14,16 +14,14 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:unit": "vitest run -t unit", 
+    "test:unit": "vitest run -t unit",
     "test:dev": "cross-env TEST_MODE=true vitest run -t dev",
     "test:dev:watch": "cross-env TEST_MODE=true vitest -t dev",
     "test:prod": "vitest run -t prod",
     "test:prod:watch": "vitest -t prod",
     "test:pattern": "vitest run -t",
     "vercel-build": "node vercel-build.js",
-
     "___test workflow____": "___test workflow using vitest and test driven development____",
-
     "___STATUS:PASSED____": "___the following tests have passed____",
     "test:setup:unit": "vitest run routes/setup/__tests__/unit",
     "test:setup:dev": "cross-env TEST_MODE=true vitest run routes/setup/__tests__/e2e/dev",
@@ -33,17 +31,13 @@
     "test:auth:dev": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev",
     "test:auth:dev:success": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev/success",
     "test:auth:dev:error": "cross-env TEST_MODE=true vitest run routes/auth/__tests__/e2e/dev/error",
-
     "___STATUS:TODO____": "___the following tests need to be verified____",
     "test:assessment:unit": "vitest run routes/assessment/__tests__/unit",
     "test:assessment:dev": "cross-env TEST_MODE=true vitest run routes/assessment/__tests__/e2e/dev",
-
     "test:setup:prod": "vitest run routes/setup/__tests__/e2e/prod",
-
     "test:auth:prod:success": "vitest run routes/auth/__tests__/e2e/prod/success",
     "test:auth:prod:error": "vitest run routes/auth/__tests__/e2e/prod/error",
     "test:auth:prod": "vitest run routes/auth/__tests__/e2e/prod",
-
     "test:assessment:prod": "vitest run routes/assessment/__tests__/e2e/prod",
     "test:assessment:prod:success": "vitest run routes/assessment/__tests__/e2e/prod/success",
     "test:assessment:prod:error": "vitest run routes/assessment/__tests__/e2e/prod/error",
