refactor: update import paths for core API modules and adjust Vite configuration for improved modularity and maintainability

--- a/dottie-app/tsconfig.json
+++ b/dottie-app/tsconfig.json
@@ -18,7 +18,9 @@
     "esModuleInterop": true,
     "incremental": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "core/*": ["./src/api/core/*"],
+      "@core/*": ["./src/api/core/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", "vite.config.ts"],
