--- a/backend/package.json
+++ b/backend/package.json
@@ -55,6 +55,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^0.7.0",
+    "@google/generative-ai": "^0.24.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
