--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "db:init": "node db/init.js",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
